#2885 fix: collapsed filter margin

--- a/Realization/frontend/czechidm-core/src/components/advanced/Filter/Filter.less
+++ b/Realization/frontend/czechidm-core/src/components/advanced/Filter/Filter.less
@@ -66,7 +66,7 @@
       padding-bottom: 0;
 
       .advanced-filter {
-        margin: 10px 0 0 0;
+        margin: 0px;
 
         .abstract-form {
           padding: 10px 0px;
@@ -84,7 +84,6 @@
       .basic-toolbar {
 
         .advanced-filter {
-          margin: -10px 0px 10px;
 
           .abstract-form {
             padding: 10px 0px;
